# Salesfunk

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  script.py
notebooks/: example.py
src/salesfunk/: _BU_oauth.py  __init__.py  client.py  oauth.py
src/sf_oauth/: __init__.py  oauth.py
tests/: test_oauth.py
